shaderc-bindings/shaderc_wrapper.h

// Core shaderc types
typedef struct shaderc_compiler* shaderc_compiler_t;
typedef struct shaderc_compile_options* shaderc_compile_options_t;
// SPIR-V version
typedef enum {
    shaderc_spirv_version_1_0 = 0x010000,
    shaderc_spirv_version_1_1 = 0x010100,
    shaderc_spirv_version_1_2 = 0x010200,
    shaderc_spirv_version_1_3 = 0x010300,
    shaderc_spirv_version_1_4 = 0x010400,
    shaderc_spirv_version_1_5 = 0x010500,
    shaderc_spirv_version_1_6 = 0x010600,
} shaderc_spirv_version;
// Core API functions
shaderc_compiler_t shaderc_compiler_initialize(void);
void shaderc_compiler_release(shaderc_compiler_t compiler);
shaderc_compile_options_t shaderc_compile_options_initialize(void);
shaderc_compile_options_t shaderc_compile_options_clone(const shaderc_compile_options_t options);
void shaderc_compile_options_release(shaderc_compile_options_t options);
void shaderc_compile_options_add_macro_definition(shaderc_compile_options_t options,
                                                  const char* name, size_t name_length,
                                                  const char* value, size_t value_length);