shaderc-bindings/src/main/java/io/github/yetyman/shaderc/generated/ShadercFFM.java

     */
    public static int shaderc_spirv_version_1_2() {
        return shaderc_spirv_version_1_2;
    }
    private static final int shaderc_spirv_version_1_3 = (int)66304L;
    /**
     * {@snippet lang=c :
     * enum <anonymous>.shaderc_spirv_version_1_3 = 66304
     * }
     */
    public static int shaderc_spirv_version_1_3() {
        return shaderc_spirv_version_1_3;
    }
    private static final int shaderc_spirv_version_1_4 = (int)66560L;
    /**
     * {@snippet lang=c :
     * enum <anonymous>.shaderc_spirv_version_1_4 = 66560
     * }
     */
    public static int shaderc_spirv_version_1_4() {
        return shaderc_spirv_version_1_4;
    }
    private static final int shaderc_spirv_version_1_5 = (int)66816L;
    /**
     * {@snippet lang=c :
     * enum <anonymous>.shaderc_spirv_version_1_5 = 66816
     * }
     */
    public static int shaderc_spirv_version_1_5() {
        return shaderc_spirv_version_1_5;
    }
    private static final int shaderc_spirv_version_1_6 = (int)67072L;
    /**
     * {@snippet lang=c :
     * enum <anonymous>.shaderc_spirv_version_1_6 = 67072
     * }
     */
    public static int shaderc_spirv_version_1_6() {
        return shaderc_spirv_version_1_6;
    }

    private static class shaderc_compiler_initialize {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ShadercFFM.C_POINTER    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("shaderc_compiler_initialize");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * shaderc_compiler_t shaderc_compiler_initialize()
     * }
     */
    public static FunctionDescriptor shaderc_compiler_initialize$descriptor() {
        return shaderc_compiler_initialize.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * shaderc_compiler_t shaderc_compiler_initialize()
     * }
     */
    public static MethodHandle shaderc_compiler_initialize$handle() {
        return shaderc_compiler_initialize.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * shaderc_compiler_t shaderc_compiler_initialize()
     * }
     */
    public static MemorySegment shaderc_compiler_initialize$address() {
        return shaderc_compiler_initialize.ADDR;
    }

    /**
     * {@snippet lang=c :
     * shaderc_compiler_t shaderc_compiler_initialize()
     * }
     */
    public static MemorySegment shaderc_compiler_initialize() {
        var mh$ = shaderc_compiler_initialize.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("shaderc_compiler_initialize");
            }
            return (MemorySegment)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class shaderc_compiler_release {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            ShadercFFM.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("shaderc_compiler_release");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void shaderc_compiler_release(shaderc_compiler_t compiler)
     * }
     */
    public static FunctionDescriptor shaderc_compiler_release$descriptor() {
        return shaderc_compiler_release.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void shaderc_compiler_release(shaderc_compiler_t compiler)
     * }
     */
    public static MethodHandle shaderc_compiler_release$handle() {
        return shaderc_compiler_release.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void shaderc_compiler_release(shaderc_compiler_t compiler)
     * }
     */
    public static MemorySegment shaderc_compiler_release$address() {
        return shaderc_compiler_release.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void shaderc_compiler_release(shaderc_compiler_t compiler)
     * }
     */
    public static void shaderc_compiler_release(MemorySegment compiler) {
        var mh$ = shaderc_compiler_release.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("shaderc_compiler_release", compiler);
            }
            mh$.invokeExact(compiler);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class shaderc_compile_options_initialize {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ShadercFFM.C_POINTER    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("shaderc_compile_options_initialize");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * shaderc_compile_options_t shaderc_compile_options_initialize()
     * }
     */
    public static FunctionDescriptor shaderc_compile_options_initialize$descriptor() {
        return shaderc_compile_options_initialize.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * shaderc_compile_options_t shaderc_compile_options_initialize()
     * }
     */
    public static MethodHandle shaderc_compile_options_initialize$handle() {
        return shaderc_compile_options_initialize.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * shaderc_compile_options_t shaderc_compile_options_initialize()
     * }
     */
    public static MemorySegment shaderc_compile_options_initialize$address() {
        return shaderc_compile_options_initialize.ADDR;
    }

    /**
     * {@snippet lang=c :
     * shaderc_compile_options_t shaderc_compile_options_initialize()
     * }
     */
    public static MemorySegment shaderc_compile_options_initialize() {
        var mh$ = shaderc_compile_options_initialize.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("shaderc_compile_options_initialize");
            }
            return (MemorySegment)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class shaderc_compile_options_clone {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ShadercFFM.C_POINTER,
            ShadercFFM.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("shaderc_compile_options_clone");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * shaderc_compile_options_t shaderc_compile_options_clone(const shaderc_compile_options_t options)
     * }
     */
    public static FunctionDescriptor shaderc_compile_options_clone$descriptor() {
        return shaderc_compile_options_clone.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * shaderc_compile_options_t shaderc_compile_options_clone(const shaderc_compile_options_t options)
     * }
     */
    public static MethodHandle shaderc_compile_options_clone$handle() {
        return shaderc_compile_options_clone.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * shaderc_compile_options_t shaderc_compile_options_clone(const shaderc_compile_options_t options)
     * }
     */
    public static MemorySegment shaderc_compile_options_clone$address() {
        return shaderc_compile_options_clone.ADDR;
    }

    /**
     * {@snippet lang=c :
     * shaderc_compile_options_t shaderc_compile_options_clone(const shaderc_compile_options_t options)
     * }
     */
    public static MemorySegment shaderc_compile_options_clone(MemorySegment options) {
        var mh$ = shaderc_compile_options_clone.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("shaderc_compile_options_clone", options);
            }
            return (MemorySegment)mh$.invokeExact(options);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class shaderc_compile_options_release {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            ShadercFFM.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("shaderc_compile_options_release");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void shaderc_compile_options_release(shaderc_compile_options_t options)
     * }
     */
    public static FunctionDescriptor shaderc_compile_options_release$descriptor() {
        return shaderc_compile_options_release.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void shaderc_compile_options_release(shaderc_compile_options_t options)
     * }
     */
    public static MethodHandle shaderc_compile_options_release$handle() {
        return shaderc_compile_options_release.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void shaderc_compile_options_release(shaderc_compile_options_t options)
     * }
     */
    public static MemorySegment shaderc_compile_options_release$address() {
        return shaderc_compile_options_release.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void shaderc_compile_options_release(shaderc_compile_options_t options)
     * }
     */
    public static void shaderc_compile_options_release(MemorySegment options) {
        var mh$ = shaderc_compile_options_release.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("shaderc_compile_options_release", options);
            }
            mh$.invokeExact(options);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class shaderc_compile_options_add_macro_definition {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            ShadercFFM.C_POINTER,
            ShadercFFM.C_POINTER,
            ShadercFFM.C_LONG_LONG,
            ShadercFFM.C_POINTER,
            ShadercFFM.C_LONG_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("shaderc_compile_options_add_macro_definition");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void shaderc_compile_options_add_macro_definition(shaderc_compile_options_t options, const char *name, size_t name_length, const char *value, size_t value_length)
     * }
     */
    public static FunctionDescriptor shaderc_compile_options_add_macro_definition$descriptor() {
        return shaderc_compile_options_add_macro_definition.DESC;
    }
